--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
-POSTGRES_URL=postgresql://admin:admin@postgres:5432/portfolio?connection_timeout=300
+POSTGRES_URL=postgresql://admin:admin@postgres:5432/personal_site?connection_timeout=300
+
+JWT_ALGORITHM=HS256
+JWT_SECRET=jwt-secret
+JWT_SECRET_REFRESH=jwt-secret-refresh
+JWT_SECRET_EXPIRES_IN=5m
+JWT_SECRET_REFRESH_EXPIRES_IN=1h
