--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -196,6 +196,75 @@
           }
         }
       }
+    },
+    "personal-site-ui": {
+      "projectType": "library",
+      "root": "projects/personal-site-ui",
+      "sourceRoot": "projects/personal-site-ui/src",
+      "prefix": "ui",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/personal-site-ui/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/personal-site-ui/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/personal-site-ui/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/personal-site-ui/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
+    },
+    "personal-site-material": {
+      "projectType": "library",
+      "root": "projects/personal-site-material",
+      "sourceRoot": "projects/personal-site-material/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/personal-site-material/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/personal-site-material/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/personal-site-material/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/personal-site-material/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
