--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -262,6 +262,39 @@
           }
         }
       }
+    },
+    "personal-site-core": {
+      "projectType": "library",
+      "root": "projects/personal-site-core",
+      "sourceRoot": "projects/personal-site-core/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/personal-site-core/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/personal-site-core/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/personal-site-core/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/personal-site-core/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
     }
   },
   "cli": {
